{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 1366,
  "lineage": "b8e274db-9160-f798-70bc-35554e8a0670",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "doc_search_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145880140878:internet-gateway/igw-0fa5410a880b35402",
            "id": "igw-0fa5410a880b35402",
            "owner_id": "145880140878",
            "vpc_id": "vpc-0c0c80688e06df492"
          },
          "dependencies": [
            "aws_vpc.doc_search_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fa5410a880b35402",
            "id": "r-rtb-0bc49f9e47706f5f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc49f9e47706f5f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.doc_search_vpc",
            "aws_route_table.public",
            "aws_vpc.doc_search_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145880140878:route-table/rtb-0bc49f9e47706f5f3",
            "id": "rtb-0bc49f9e47706f5f3",
            "owner_id": "145880140878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa5410a880b35402",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0c80688e06df492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.doc_search_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081071f5fb3781bea",
            "route_table_id": "rtb-0bc49f9e47706f5f3",
            "subnet_id": "subnet-0deba63f76fe2a920"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.doc_search_vpc",
            "aws_vpc.doc_search_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145880140878:security-group/sg-00448d0b0470f0e8a",
            "description": "Security group for OpenSearch domain",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00448d0b0470f0e8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "opensearch-sg20231109024338320400000006",
            "name_prefix": "opensearch-sg",
            "owner_id": "145880140878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c0c80688e06df492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.doc_search_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "doc_search_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145880140878:subnet/subnet-0deba63f76fe2a920",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deba63f76fe2a920",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145880140878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "doc_search_vpc-subnet"
            },
            "tags_all": {
              "Name": "doc_search_vpc-subnet"
            },
            "vpc_id": "vpc-0c0c80688e06df492"
          },
          "dependencies": [
            "aws_vpc.doc_search_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "doc_search_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:145880140878:vpc/vpc-0c0c80688e06df492",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd3142d040cd6dec",
            "default_route_table_id": "rtb-0c1e8991837abd643",
            "default_security_group_id": "sg-0e8734eaa4e09f74c",
            "dhcp_options_id": "dopt-0cf0d8753dda2b2ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0c80688e06df492",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1e8991837abd643",
            "owner_id": "145880140878",
            "tags": {
              "Name": "doc_search_vpc"
            },
            "tags_all": {
              "Name": "doc_search_vpc"
            }
          }
        }
      ]
    }
  ]
}